# datafabric-backend

./: .gitignore  Dockerfile.airflow  Dockerfile.spark-worker  QUICK_START.md  README_MICROSERVICES.md  SYNC_PARALLELISM_FIX.md  docker-compose-airflow3.0.yml  docker-compose.yml  register_connections.sh  setup_airflow_pools.py  test_sync_parallelism.py
project/: Dockerfile  alembic.ini  pyproject.toml
project/alembic/: env.py
project/alembic/versions/: 20260211_0001_initial_schema.py  20260211_0002_add_missing_silver_tables.py  20260211_0003_add_virtualized_sharing.py  20260211_0004_add_bronze_silver_source_types.py  20260215_0005_add_llm_extractions_column.py  20260218_0006_add_pinned_delta_version_to_share_tables.py  20260218_0007_fix_access_logs_fk_on_delete.py  20260218_0008_add_source_config_ids_to_share_tables.py  20260218_0009_add_logical_versioning_fields.py
project/app/: main.py
project/app/api/: api.py
project/app/core/: auth.py  config.py  credential_encryption.py  hierarchy.py
project/app/crud/: equivalence.py  token.py
project/app/database/: base.py  baseMixin.py  core.py  database.py  metadata.py  session.py  utils.py  workflow.py
project/app/docs/: equivalence_endpoints.md
project/app/services/: airflow_client.py  bronze_ingestion_service.py  bronze_versioning_service.py  connection_manager.py  constraint_extraction_service.py  data_connection_service.py  data_normalizer.py  data_preview.py  data_query_service.py  data_source_extraction_service.py  data_unification_service.py  data_visualization.py  dataset_image_service.py  trino_client.py  (+12 more)
(+145 files in other folders)
